# Qwen-Image-Edit-LoRA-Trainer

./: .gitignore  CONTRIBUTING.md  README.md  inference.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  train.py
configs/: fixbody-r64.yaml
examples/: basic_inference.sh
src/: __init__.py  config_validation.py  dataset.py  models.py  utils.py
tests/: __init__.py  test_config_validation.py  test_utils.py
